--- a/biblioteca/pom.xml
+++ b/biblioteca/pom.xml
@@ -1,23 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.ufab.tec</groupId>
+	<groupId>com.ufab</groupId>
 	<artifactId>biblioteca</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Archetype - biblioteca</name>
-	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>biblioteca Maven Webapp</name>
+	<url>http://maven.apache.org</url>
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.11.0</version>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -25,4 +25,7 @@
 			<version>6.0.6</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<finalName>biblioteca</finalName>
+	</build>
 </project>
