--- a/biblioteca/src/main/resources/log4j.properties
+++ b/biblioteca/src/main/resources/log4j.properties
@@ -1,17 +1,13 @@
-#Configuracoes de LOGGER
-## Appender para Console
-log4j.rootCategory=INFO,stdout,fileOut
+### Appender para Console
+log4j.rootLogger=INFO,stdout,fileOut
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) – %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%-p][%d{dd/MM/yyyy - HH:mm:ss}][%c][%t][%L]: %m%n
 
-#### Appender para arquivo
+##### Appender para arquivo
 log4j.appender.fileOut =org.apache.log4j.RollingFileAppender
 log4j.appender.fileOut.File=biblioteca_ufba.log
 log4j.appender.fileOut.MaxFileSize=100mb
 log4j.appender.fileOut.MaxBackupIndex=1
 log4j.appender.fileOut.layout=org.apache.log4j.PatternLayout
-log4j.appender.fileOut.layout.ConversionPattern=%-2d{dd/MM/yy HH:mm} [%t] %5p %c:%L – %m%n
-
-#Conexao com o banco de dados
-jdbc:mysql//localhost:3306/sdteotonio
+log4j.appender.fileOut.layout.ConversionPattern=[%-p][%d{dd/MM/yyyy - HH:mm:ss}][%c][%t][%L]: %m%n
