--- a/biblioteca/src/main/resources/app.properties
+++ b/biblioteca/src/main/resources/app.properties
@@ -1,4 +1,5 @@
-#Configuracoes de LOGGER
-
 #Conexao com o banco de dados
-#jdbc:mysql//localhost:3306/sdteotonio
+database.esquema=db_biblioteca_ufab
+database.host=localhost
+database.usuario=root
+database.senha=Motocross788
