Inicio impl dos servicos de reserve e locacao

--- a/ufab-biblioteca/src/main/resources/application.properties
+++ b/ufab-biblioteca/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 #DB MYSQL properties:
 
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/db_biblioteca_ufab?createDatabaseIfNotExist=true
-db.username=root
-db.password=Motocross788
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#db.driver=com.mysql.jdbc.Driver
+#db.url=jdbc:mysql://localhost:3306/db_biblioteca_ufab?createDatabaseIfNotExist=true
+#db.username=root
+#db.password=
+#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 # DB H2 properties 
 
-#db.driver=org.h2.Driver
-#db.url=jdbc:h2:~/db_biblioteca_ufab
-#db.username=sa
-#db.password=
-#hibernate.dialect=org.hibernate.dialect.H2Dialect
+db.driver=org.h2.Driver
+db.url=jdbc:h2:~/db_biblioteca_ufab
+db.username=sa
+db.password=
+hibernate.dialect=org.hibernate.dialect.H2Dialect
 
  
 #Hibernate Configuration:
