--- a/ufab-biblioteca/pom.xml
+++ b/ufab-biblioteca/pom.xml
@@ -61,6 +61,11 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		<!-- CGLIB -->
 		<dependency>
 			<groupId>cglib</groupId>
