Spring Security configurado, inicio da implementacao.

--- a/ufab-biblioteca/src/main/resources/application.properties
+++ b/ufab-biblioteca/src/main/resources/application.properties
@@ -19,5 +19,5 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 #Hibernate Configuration:
 
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
 entitymanager.packages.to.scan=com.ufab.entidade
