--- a/ufab-biblioteca/src/main/resources/application.properties
+++ b/ufab-biblioteca/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/db_biblioteca_ufab?createDatabaseIfNotExist=true
 db.username=root
-db.password=Motocross788
+db.password=root
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
  
 #Hibernate Configuration:
